[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartfinder"
version = "1.0.0"
description = "Pathfinding module with Heatmap system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
keywords = ["ai", "pathfinding", "pathfinder", "cart", "cartfinder", "bot", "grid", "matrix", "heatmap", "a-star", "dijkstra", "game-dev"]
authors = [
    { name = "ZedKa450", email = "zedka.le.vrai.pro@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/zedka450/CartFinder/tree/main/cartfinder"
Bug-Tracker = "https://github.com/zedka450/CartFinder/issues"
Repository = "https://github.com/zedka450/CartFinder.git"

[tool.hatch.build.targets.wheel]
packages = ["cartfinder"]